--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <title>Page Title</title>
 </head>
 <body>
 
-<a href="nyFIRS/nyFIRS User Manual.html>This is a Heading</h1>
+<a href="nyFIRS/nyFIRS User Manual.html">This is a Heading</a>
 <p>This is a paragraph.</p>
 
 </body>
