--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 </head>
 <body>
 
-<a href="nyFIRS/nyFIRS User Manual.html">This is a Heading</a>
-<p>This is a paragraph.</p>
+  <p><a href="nyFIRS/nyFIRS User Manual.html">nyFIRS</a></p>
+    
+<p><a href="NFRS_ERD/Index.html">NFRS ERD</a></p>
 
 </body>
 </html> 
